# haproxy-1.8

./: .editorconfig  .gitignore  CMakeLists.txt  GNUmakefile  Makefile.haproxy  build-like-openshift.sh
cmake/: use-gold-linker.cmake  use-lld-linker.cmake
include/proto/: connection.h  task.h
include/types/: connection.h  task.h
src/: checks.c  haproxy.c  health_check.c  health_check.h  log.c  log_health.c  log_health.h  proto_tcp.c
